test/core/errors/builtin_types_error/zs/intfield_without_arg_error.zs
package intfield_without_arg_error;

struct WrongIntfield
{
    int wrong;
};
